--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,10 +7,6 @@ foreach(to_exclude ${tmp})
     list(REMOVE_ITEM rocRAND_TEST_SRCS "${to_exclude}")
 endforeach()
 
-if (WIN32)
-  set(DLLS_COPIED OFF)
-endif()
-
 # Build rocRAND tests
 foreach(test_src ${rocRAND_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
@@ -111,7 +107,9 @@ foreach(test_src ${hipRAND_TEST_SRCS})
             RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
     )
     add_test(NAME ${test_name} COMMAND $<TARGET_FILE:${test_name}>)
-    if (WIN32 AND NOT DLLS_COPIED)
+    if (WIN32 AND NOT DEFINED DLLS_COPIED)
+      set(DLLS_COPIED "YES")
+      set(DLLS_COPIED ${DLLS_COPIED} PARENT_SCOPE)
       # for now adding in all .dll as dependency chain is not cmake based on win32
       file( GLOB third_party_dlls
       LIST_DIRECTORIES ON
@@ -120,10 +118,9 @@ foreach(test_src ${hipRAND_TEST_SRCS})
       ${CMAKE_SOURCE_DIR}/rtest.*
       )
       foreach( file_i ${third_party_dlls})
-      add_custom_command( TARGET ${test_name} POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${file_i} ${PROJECT_BINARY_DIR}/test )
+        add_custom_command( TARGET ${test_name} POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${file_i} ${PROJECT_BINARY_DIR}/test )
       endforeach( file_i )
-      set(DLLS_COPIED ON)
-  endif()       
+    endif()       
 endforeach()
 # Checks for simple linkage problems
 add_subdirectory(linkage)
