--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ variables:
   # Local build options
   LOCAL_CXXFLAGS: ""
   LOCAL_CMAKE_OPTIONS: ""
-  ROCM_LATEST_PATH: "/opt/rocm-4.2.0/"
+  ROCM_LATEST_PATH: "/opt/rocm-4.3.0/"
 
 # ROCm
 
@@ -353,3 +353,22 @@ test:nvcc_install:
     - make VERBOSE=1
     - $SUDO_CMD ctest --output-on-failure
     - ldd ./test_hiprand
+
+test:doc:
+  variables:
+    SUDO_CMD: "sudo -E"
+  tags:
+    - rocm # Do it on rocm machine
+  image: rocm/rocm-terminal:latest
+  stage: test
+  needs: []
+  before_script:
+    - $SUDO_CMD rm /etc/apt/sources.list.d/rocm.list
+    - $SUDO_CMD apt-get update -qq
+    - $SUDO_CMD apt-get install -y -qq doxygen python3-sphinx python3-pip
+    - $SUDO_CMD -H pip3 install numpy
+  script:
+    - cd doc
+    - $SUDO_CMD doxygen Doxyfile
+    - $SUDO_CMD make -C ../python/rocrand/docs html
+    - $SUDO_CMD make -C ../python/hiprand/docs html
