Update hipRAND submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "hipRAND"]
 	path = hipRAND
-	url = https://github.com/ROCmSoftwarePlatform/hipRAND.git
+	url = ../../ROCmSoftwarePlatform/hipRAND.git
 	branch = develop
