--- a/test/package/CMakeLists.txt
+++ b/test/package/CMakeLists.txt
@@ -101,6 +101,7 @@ foreach(test_src ${rocrand_pkg_TEST_SRCS})
         )
     endif()
     add_relative_test(${test_name} ${test_name})
+    rocm_install(TARGETS ${test_name} COMPONENT tests)
     if (WIN32 AND NOT DEFINED DLLS_COPIED)
       set(DLLS_COPIED "YES")
       set(DLLS_COPIED ${DLLS_COPIED} PARENT_SCOPE)
