--- a/test/fortran/CMakeLists.txt
+++ b/test/fortran/CMakeLists.txt
@@ -13,7 +13,7 @@ set(test_rocrand "test_rocrand_fortran_wrapper")
 add_executable(${test_rocrand} "${FRUIT_SRCS}" "${FRUIT_HELPER_SRCS}" "${FORTRAN_ROCRAND_TEST}")
 target_include_directories(${test_rocrand}
     PRIVATE
-        "${PROJECT_BINARY_DIR}/library/fortran"
+        "$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/library/fortran>"
 )
 target_link_libraries(${test_rocrand} rocrand_fortran)
 set_target_properties(${test_rocrand}
