--- a/test/linkage/CMakeLists.txt
+++ b/test/linkage/CMakeLists.txt
@@ -16,7 +16,7 @@ function(add_rocrand_link_test TEST_SOURCES)
     endif()
     target_include_directories(${TEST_TARGET}
         PUBLIC
-            ${PROJECT_SOURCE_DIR}/library/src
+            $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/library/src>
     )
     if(TARGET GTest::GTest)
         target_link_libraries(${TEST_TARGET}
@@ -41,6 +41,7 @@ function(add_rocrand_link_test TEST_SOURCES)
             RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
     )
     add_relative_test(${TEST_TARGET} ${TEST_TARGET})
+    rocm_install(TARGETS ${TEST_TARGET} COMPONENT tests)
 endfunction()
 
 add_rocrand_link_test("test_rocrand_linkage.cpp;get_rocrand_version.cpp")
